c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/string_literal_is_plain_char_pointer.c
/* String literals decay to char * arrays,
 * and can't initialize pointers to other types. */
int main(void) {
    // ptr is a signed char *, but "foo" decays to type char *
    signed char *ptr = "foo";
    return 0;
}